src/test/deca/context/valid/SansObjet/DeclVar-Lower-boolean-int-int.deca
// Description:
//    Declaration of a boolean variable using < operation between a int variable and int .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  5; 
    int y = 17; 
    boolean z = 5 < 17; 
}
